# Task-Manager

./: CMakeLists.txt  Containers.hpp  Hook.hpp  Semaphore.hpp  Task.cpp  Task.hpp  TaskManager.cpp  TaskManager.hpp  data_example_block.hpp  main.cpp  observer.hpp  router.cpp  router.hpp  routine.cpp  routine.hpp
